[tool.poetry]
name = "fastapi-test"
version = "0.1.0"
description = ""
authors = ["Alex Sharp <ajsharp@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.0"
Hypercorn = "^0.11.2"
SQLAlchemy = "^1.4.22"
asyncpg = "^0.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
